<resources>
    <string name="app_name">PM_Diario</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="titulo">Titulo...</string>
    <string name="conteudo">Conteúdo...</string>
    <string name="diario">Diario</string>
    <string name="calendario">Calendario</string>
</resources>