<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotaActivity">

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="@+id/etHora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tmTexto"
        android:layout_width="380dp"
        android:layout_height="429dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/conteudo"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_borde"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/btnEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etData"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="10dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/etHora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHora"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etHora"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginEnd="112dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="@+id/etData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etData"
        app:layout_constraintTop_toTopOf="@+id/etData"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tmTexto"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/black"
        android:text="@string/editar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnExcluir"
        app:layout_constraintStart_toEndOf="@+id/btnSalvar" />

    <Spinner
        android:id="@+id/spEmoji"
        android:layout_width="110dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toTopOf="@+id/tmTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />

</androidx.constraintlayout.widget.ConstraintLayout>